Added custom config.json