@@ -11,7 +11,6 @@ targetCompatibility = '17'
 
 repositories {
     mavenCentral()
-    maven { url 'https://jitpack.io' }  // Added JitPack repository
 }
 
 ext {
@@ -20,6 +19,8 @@ ext {
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
+    //options.compilerArgs += ['--module-path', 'libs', '--add-modules', 'jlibtorrent']
+
 }
 
 application {
@@ -33,6 +34,12 @@ dependencies {
     implementation 'org.openjfx:javafx-fxml:17.0.1'
     testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
+    //implementation files('libs/jlibtorrent-linux-1.2.17 .0.jar', 'libs/jlibtorrent-1.2.17.0.jar')
+
+    //implementation 'com.github.frostwire:frostwire-jlibtorrent:release~1.2.19.0'
+    //implementation group: 'com.frostwire', name: 'jlibtorrent', version: '1.2.0.17'
+    implementation 'com.frostwire:jlibtorrent:1.2.0.17'
+
 }
 
 test {
